# agent-maintenance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent-maintenance.toml.example  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/skills/: api_design.md  code_review.md  git_workflow.md  python_debugging.md  react_component_lifecycle__merged_3_skills.md  testing_strategy.md
src/agent_maintenance/: __init__.py
src/agent_maintenance/cli/: forge.py  loadout.py  main.py
src/agent_maintenance/core/: config.py  models.py  parser.py
src/agent_maintenance/forge/: archiver.py  clusterer.py  comparator.py  merger.py  normalizer.py  reader.py  writer.py
src/agent_maintenance/loadout/: ranker.py  selector.py  writer.py
src/agent_maintenance/providers/: anthropic.py  base.py  embeddings.py  factory.py  llm.py  ollama.py  sentence_transformers.py
tests/test_core/: test_config.py  test_discovery.py  test_models.py  test_parser.py
tests/test_forge/: test_archiver.py  test_clusterer.py  test_comparator.py  test_forge_run_cli.py  test_merger.py  test_reader.py  test_structural_merge.py
tests/test_loadout/: test_ranker.py  test_writer.py
tests/test_providers/: test_anthropic.py  test_factory.py  test_ollama.py
